deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdf-gen
spec:
  selector:
    matchLabels:
      app: rdf-gen
  template:
    metadata:
      labels:
        app: rdf-gen
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: rdf-gen
        image: github.com/gsantipantakis/DataEnrichmentDockerImage:latest
        ports:
        - containerPort: 2023
