deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdf-gen
spec:
  selector:
    app: rdf-gen
  ports:
  - port: 2023
    targetPort: 2023
